--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Generate sidebarDemoId Link</title>
+  <title>Walnut Extractor</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
   <style>
     body {
@@ -11,6 +11,9 @@
       max-width: 600px;
       margin: 80px auto;
       background-color: #eeeafa;
+      box-shadow: 0px -2px 34px 3px rgba(0,0,0,0.36);
+      -webkit-box-shadow: 0px -2px 34px 3px rgba(0,0,0,0.36);
+      -moz-box-shadow: 0px -2px 34px 3px rgba(0,0,0,0.36);
     }
     input, button {
       padding: 0.5rem;
