--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
       border: 1px solid #C2C7D0;
       display: none;
     }
+
+    @keyframes fadeSlideIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .show-result {
+      animation: fadeSlideIn 0.4s ease-out;
+    }
+
   </style>
 </head>
 <body>
@@ -144,20 +160,24 @@
 
         if (demoId) {
           const newUrl = `https://app.teamwalnut.com/library?&sidebarDemoId=${encodeURIComponent(demoId)}&sidebarTab=details`;
-          result.innerHTML = `
-            <article>
-              <header>Generated Link</header>
-              <a href="${newUrl}" target="_blank">${newUrl}</a>
-            </article>
-            <article>
-              <header>Demo Id (click to copy to clipboard)</header>
-              <p class="demo-id" title="Click to copy">${demoId}</p>
-            </article>
-          `;
+          setTimeout(() => {
+            result.innerHTML = `
+              <article>
+                <header>Generated Link</header>
+                <a href="${newUrl}" target="_blank">${newUrl}</a>
+              </article>
+              <article>
+                <header>Demo Id (click to copy to clipboard)</header>
+                <p class="demo-id" title="Click to copy" style="color: #2e323d;">${demoId}</p>
+              </article>
+            `;
 
-          document.querySelector('.demo-id').addEventListener('click', () => {
-            copyToClipboard(demoId);
-          });
+            result.classList.add('show-result');
+
+            document.querySelector('.demo-id').addEventListener('click', () => {
+              copyToClipboard(demoId);
+            });
+          }, 10);
 
         } else {
           result.textContent = "demoId parameter not found in the URL.";
